Added changes to UI

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+.chord-finder{
+  display:flex;
+  justify-content:center;
+  margin: -15vh;
+}
+
+.chord-form{
+  display:flex;
+}
+form{  display:flex;
+  }
 
 .App-logo {
   height: 40vmin;
@@ -13,27 +24,8 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 1000px) {
+  .chord-finder{
+      margin:0px;
   }
 }
