--- a/src/assets/styles/string.css
+++ b/src/assets/styles/string.css
@@ -1,3 +1,8 @@
+.chord-diagram{
+    text-align: left;;
+    display: flex;
+    flex-direction: column;
+    align-items: center;}
 .string{
     display:flex;
     list-style-type: none;
@@ -35,6 +40,54 @@
     height:8%;
 }
 
+#String5::before{
+    content:"E";
+    font-weight:bolder;
+    font-size:1.75rem;
+
+    position:relative;
+    top:-100%;
+}
+#String4::before{
+    content:"A";
+    font-weight:bolder;
+    font-size:1.75rem;
+
+    position:relative;
+    top:-100%;
+}
+#String3::before{
+    content:"D";
+    font-weight:bolder;
+    font-size:1.75rem;
+    position:relative;
+    top:-100%;
+}
+#String2::before{
+    content:"G";
+    font-weight:bolder;
+    font-size:1.75rem;
+
+    position:relative;
+    top:-100%;
+}
+#String1::before{
+    content:"B";
+    font-weight:bolder;
+    font-size:1.75rem;
+
+    position:relative;
+    top:-100%;
+}
+#String0::before{
+    content:"E";
+    font-weight:bolder;
+    font-size:1.75rem;
+
+    position:relative;
+    top:-100%;
+}
+
 
 /* #String5{
     border-bottom:solid black;
@@ -45,9 +98,9 @@
     } */
 .active{
     background: black;
-    height: 100%;
+    height: 80%;
     border-radius: 100%;
-    width: 50%;
+    width: 25%;
     margin: 0px auto;
     position: relative;
     top: -60%;
@@ -99,3 +152,54 @@
     opacity:50%
 
 } */
+
+
+@media only screen and (max-width: 1000px) {
+    #String5::before{
+        content:"E";
+        font-weight:bolder;
+        font-size:1.5rem;
+    
+        position:relative;
+        top:-175%;
+    }
+    #String4::before{
+        content:"A";
+        font-weight:bolder;
+        font-size:1.5rem;
+    
+        position:relative;
+        top:-175%;
+    }
+    #String3::before{
+        content:"D";
+        font-weight:bolder;
+        font-size:1.5rem;
+        position:relative;
+        top:-175%;
+    }
+    #String2::before{
+        content:"G";
+        font-weight:bolder;
+        font-size:1.5rem;
+    
+        position:relative;
+        top:-175%;
+    }
+    #String1::before{
+        content:"B";
+        font-weight:bolder;
+        font-size:1.5rem;
+    
+        position:relative;
+        top:-175%;
+    }
+    #String0::before{
+        content:"E";
+        font-weight:bolder;
+        font-size:1.5rem;
+    
+        position:relative;
+        top:-175%;
+    }
+  }
